--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@ body {
 #footer {
     margin-bottom: 5%;
 }
+.perfect-centering2 {
+    position: absolute;
+    top: 70%;
+    left:50%;
+    transform: translate(-50%,-50%);
+  }
